[package]
name = "gpio-utils"
version = "0.3.0"
authors = ["Rust Embedded WG Linux Team <embedded-linux@teams.rust-embedded.org>",
           "Paul Osborne <osbpau@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/rust-embedded/gpio-utils"
keywords = ["gpio", "linux", "sysfs_gpio", "cli", "command-line"]
edition = "2021"
rust-version = "1.75.0"
description = """
Command-line utilities for interacting with GPIOs under Linux

This wraps the `sysfs_gpio` crate in a form usable by both
Rust applications or any other applications.
"""

[dependencies]
clap = { version = "4.5", features = ["derive"] }
error-chain = "0.12"
sysfs_gpio = "0.6.2"
toml = "0.4"
glob = "0.2"
lazy_static = "1.1"
log = "0.4"
env_logger = "0.5"
nix = "0.11"
serde_derive = "1.0"
serde = "1.0"
uzers = { version = "0.12.1", default-features = false, features = ["cache"] }

# TODO Unpin this dependency after bumping our MSRV beyond 1.75.0.
backtrace = "=0.3.74"

[[bin]]
name = "gpio"
path = "src/main.rs"

[lints.rust]
# The cfg `has_error_description_deprecated` is introduced by the error_chain crate.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(has_error_description_deprecated)'] }
