[package]
name = "gpio-utils"
version = "0.4.1"
authors = ["Rust Embedded WG Linux Team <embedded-linux@teams.rust-embedded.org>",
           "Paul Osborne <osbpau@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/rust-embedded/gpio-utils"
keywords = ["gpio", "linux", "sysfs_gpio", "cli", "command-line"]
edition = "2021"
rust-version = "1.75.0"
description = """
Command-line utilities for interacting with GPIOs under Linux

This wraps the `sysfs_gpio` crate in a form usable by both
Rust applications or any other applications.
"""

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
sysfs_gpio = "0.6.2"
toml = { version = "<=0.9.6", default-features = false, features = ["parse", "serde"] }
glob = "0.3.3"
lazy_static = "1.1"
log = "0.4"
env_logger = "0.11.8"
nix = { version = "0.30.1", features = ["fs", "user"] }
serde_derive = "1.0"
serde = "1.0"
uzers = { version = "0.12.1", default-features = false, features = ["cache"] }

# TODO Cross check and unpin the transitive dependencies below after bumping
# our MSRV beyond 1.75.0.
backtrace = "=0.3.74"
serde_spanned = "<=1.0.1"
toml_datetime = "<=0.7.1"
toml_parser = "<=1.0.2"
thiserror = { version = "2.0.16", default-features = false }


[[bin]]
name = "gpio"
path = "src/main.rs"
